[tool.poetry]
name = "yieldguard"
version = "0.1.0"
description = ""
authors = ["jaimebw <jaimebwv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.7.4.post0"
alabaster = "0.7.12"
anyio = "2.2.0"
appdirs = "1.4.4"
appnope = "0.1.2"
argon2-cffi = "20.1.0"
asn1crypto = "1.4.0"
async_generator = "1.10"
async-timeout = "3.0.1"
attrs = "20.3.0"
Babel = "2.9.0"
backcall = "0.2.0"
base58 = "2.1.0"
bit = "0.7.2"
bitarray = "1.2.2"
bleach = "3.3.0"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
coincurve = "15.0.0"
colorama = "0.4.4"
commonmark = "0.9.1"
cytoolz = "0.11.0"
decorator = "4.4.2"
defusedxml = "0.7.1"
distlib = "0.3.1"
docutils = "0.16"
entrypoints = "0.3"
eth-abi = "2.1.1"
eth-account = "0.5.4"
eth-hash = "0.3.1"
eth-keyfile = "0.5.1"
eth-keys = "0.3.3"
eth-rlp = "0.2.1"
eth-typing = "2.2.2"
eth-utils = "1.10.0"
eventkit = "0.8.6"
filelock = "3.0.12"
hexbytes = "0.2.1"
ib-insync = "0.9.66"
idna = "2.10"
imagesize = "1.2.0"
iniconfig = "1.1.1"
ipfshttpclient = "0.7.0"
ipykernel = "5.5.0"
ipython = "7.21.0"
ipython_genutils = "0.2.0"
jedi = "0.18.0"
Jinja2 = "2.11.2"
json5 = "0.9.5"
jsonschema = "3.2.0"
jupyter-client = "6.1.12"
jupyter-core = "4.7.1"
jupyter-packaging = "0.7.12"
jupyter-server = "1.4.1"
jupyterlab = "3.0.12"
jupyterlab-pygments = "0.1.2"
jupyterlab-server = "2.3.0"
livereload = "2.6.3"
lru-dict = "1.1.7"
MarkupSafe = "1.1.1"
mistune = "0.8.4"
multiaddr = "0.0.9"
multidict = "5.1.0"
nbclassic = "0.2.6"
nbclient = "0.5.3"
nbconvert = "6.0.7"
nbformat = "5.1.2"
nest-asyncio = "1.5.1"
netaddr = "0.8.0"
notebook = "6.2.0"
numpy = "1.20.2"
packaging = "20.8"
pandocfilters = "1.4.3"
parsimonious = "0.8.1"
parso = "0.8.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pluggy = "0.13.1"
powerline-status = "2.7"
prometheus-client = "0.9.0"
prompt-toolkit = "3.0.17"
protobuf = "3.17.3"
ptyprocess = "0.7.0"
py = "1.10.0"
pybind11 = "2.6.2"
pycparser = "2.20"
pycryptodome = "3.10.1"
Pygments = "2.7.3"
pyparsing = "2.4.7"
pyrsistent = "0.17.3"
pytest = "6.2.2"
python-dateutil = "2.8.1"
pytz = "2020.4"
pyzmq = "22.0.3"
requests = "2.25.1"
rich = "9.10.0"
rlp = "2.0.1"
rstcheck = "3.3.1"
Send2Trash = "1.5.0"
six = "1.15.0"
sniffio = "1.2.0"
snowballstemmer = "2.0.0"
Sphinx = "3.4.0"
sphinx-autobuild = "2020.9.1"
sphinxcontrib-applehelp = "1.0.2"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "1.0.3"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.4"
terminado = "0.9.3"
testpath = "0.4.4"
toml = "0.10.2"
toolz = "0.11.1"
tornado = "6.1"
traitlets = "5.0.5"
typing-extensions = "3.7.4.3"
urllib3 = "1.26.2"
varint = "1.0.2"
virtualenv = "20.4.3"
wcwidth = "0.2.5"
web3 = "5.20.0"
webencodings = "0.5.1"
websockets = "8.1"
yarl = "1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
